<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_txt_username"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:singleLine="true"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/register_txt_password"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <TextView
            android:id="@+id/txtMobileDeviceNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/register_txt_mobile_device_no"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <EditText
            android:id="@+id/inputMobileDeviceNo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:inputType="phone"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_register_button"
            android:text="@string/landing_page_btn_login"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Large" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:indeterminate="true"
        android:visibility="gone" />

</RelativeLayout>