<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="isymphonyz.ako.ako555.AKO555LandingPage">

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_login_button"
        android:text="@string/landing_page_btn_login"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSignIn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_register_button"
        android:text="@string/landing_page_btn_register"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <isymphonyz.ako.ako555.customview.RSUTextView
        android:id="@+id/txtVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:indeterminate="true"
        android:visibility="gone" />
</RelativeLayout>