<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="isymphonyz.ako.ako555.AKO555ProjectInfo">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <RelativeLayout
                android:id="@+id/layoutTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/project_info_title_background_color"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:padding="8dp"
                    android:text="@string/payment_info_txt_title"
                    android:textColor="@color/home_txt_title_color"
                    android:textAppearance="@android:style/TextAppearance.Large" />

                <ImageView
                    android:id="@+id/btnMedia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="8dp"
                    android:adjustViewBounds="true"
                    android:src="@android:drawable/stat_sys_headset"
                    android:visibility="gone"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/txtPaymentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutTitle"
                android:layout_margin="8dp"
                android:text="@string/app_name"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <TextView
                android:id="@+id/txtDescriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtPaymentTitle"
                android:layout_below="@+id/txtPaymentTitle"
                android:layout_margin="4dp"
                android:text="@string/payment_info_txt_description" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtPaymentTitle"
                android:layout_margin="4dp"
                android:layout_toRightOf="@+id/txtDescriptionTitle"
                android:text="@string/payment_info_txt_description" />

            <TextView
                android:id="@+id/txtPaymentNumberTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtPaymentTitle"
                android:layout_below="@+id/txtDescription"
                android:layout_margin="4dp"
                android:text="@string/payment_info_txt_payment_number" />

            <TextView
                android:id="@+id/txtPaymentNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtDescription"
                android:layout_margin="4dp"
                android:layout_toRightOf="@+id/txtPaymentNumberTitle"
                android:text="@string/payment_info_txt_payment_number" />

            <TextView
                android:id="@+id/txtAmountTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtPaymentTitle"
                android:layout_below="@+id/txtPaymentNumber"
                android:layout_margin="4dp"
                android:text="@string/payment_info_txt_amount" />

            <TextView
                android:id="@+id/txtAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtPaymentNumber"
                android:layout_margin="4dp"
                android:layout_toRightOf="@+id/txtAmountTitle"
                android:text="@string/payment_info_txt_amount" />

            <TextView
                android:id="@+id/txtDueDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtPaymentTitle"
                android:layout_below="@+id/txtAmount"
                android:layout_margin="4dp"
                android:text="@string/payment_info_txt_due_date" />

            <TextView
                android:id="@+id/txtDueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtAmount"
                android:layout_margin="4dp"
                android:layout_toRightOf="@+id/txtDueDateTitle"
                android:text="@string/payment_info_txt_due_date" />

            <TextView
                android:id="@+id/txtBarcodeCounterServiceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtDueDate"
                android:layout_margin="8dp"
                android:text="@string/payment_info_txt_barcode_counter_service"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <ImageView
                android:id="@+id/imgBarcodeCounterService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_alignLeft="@+id/txtBarcodeCounterServiceTitle"
                android:layout_below="@+id/txtBarcodeCounterServiceTitle"
                android:layout_margin="4dp" />

            <isymphonyz.ako.ako555.customview.RSUTextView
                android:id="@+id/txtBarcodeCounterService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/imgBarcodeCounterService"/>

            <TextView
                android:id="@+id/txtBarcodeTescoLotusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtBarcodeCounterService"
                android:layout_margin="8dp"
                android:text="@string/payment_info_txt_barcode_tesco_lotus"
                android:textAppearance="@android:style/TextAppearance.Medium" />

            <ImageView
                android:id="@+id/imgBarcodeTescoLotus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_alignLeft="@+id/txtBarcodeTescoLotusTitle"
                android:layout_below="@+id/txtBarcodeTescoLotusTitle"
                android:layout_margin="4dp" />

            <isymphonyz.ako.ako555.customview.RSUTextView
                android:id="@+id/txtBarcodeTescoLotus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/imgBarcodeTescoLotus"/>
        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:indeterminate="true"
        android:visibility="gone" />

</RelativeLayout>
